hard-gists/1879626/run.log
=== Docker Run Log for 1879626 ===
Started at: Mi 29. Okt 12:33:00 CET 2025

[2025-10-29 12:33:00] START: Running container for 1879626
[2025-10-29 12:33:01] SUCCESS: Container 5f9020f9355414dc8405b05aefd53e2243c2f816fb044e6f97591cf7f152cb17 started for 1879626
=== Container logs for 1879626 ===
  File "/snippet.py", line 139
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1879626 ===
[2025-10-29 12:33:03] INFO: Container 5f9020f9355414dc8405b05aefd53e2243c2f816fb044e6f97591cf7f152cb17 has stopped
